# fintable-mcp

./: .gitignore  LICENSE  README.md  fintable_mcp.py  pyproject.toml  requirements.txt  server.json
src/fintable_mcp/: __init__.py  __main__.py  server.py
