[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fintable-mcp"
version = "0.1.1"
description = "Unofficial MCP server for fintable.io — manage financial categories, rules, and transactions through AI assistants"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Jason Braatz", email = "jasoncbraatz@gmail.com" },
]
keywords = [
    "mcp",
    "model-context-protocol",
    "fintable",
    "finance",
    "accounting",
    "plaid",
    "airtable",
    "livewire",
    "laravel",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Office/Business :: Financial",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "pydantic>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/jasoncbraatz/fintable-mcp"
Repository = "https://github.com/jasoncbraatz/fintable-mcp"
Issues = "https://github.com/jasoncbraatz/fintable-mcp/issues"

[project.scripts]
fintable-mcp = "fintable_mcp.__main__:main"
